--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿absl-py==2.2.1
+absl-py==2.2.1
 annotated-types==0.7.0
 attrs==25.3.0
 audioread==3.0.1
@@ -15,7 +15,7 @@ contourpy==1.3.1
 cryptography==44.0.2
 cycler==0.12.1
 decorator==5.2.1
-dlib==19.24.2
+dlib==19.24.6
 filelock==3.18.0
 firebase-admin==6.7.0
 Flask==3.1.0
