--- a/requirements.txt
+++ b/requirements.txt
@@ -101,8 +101,8 @@ soxr==0.5.0.post1
 sympy==1.13.1
 threadpoolctl==3.6.0
 tiktoken==0.9.0
-torch==2.6.0
-torchvision==0.21.0
+# torch==2.6.0
+# torchvision==0.21.0
 tqdm==4.67.1
 typing-inspection==0.4.0
 typing_extensions==4.13.0
