--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ google-resumable-media==2.7.2
 googleapis-common-protos==1.69.2
 grpcio==1.71.0
 grpcio-status==1.62.3
+gunicorn==21.2.0
 httplib2==0.22.0
 idna==3.10
 itsdangerous==2.2.0
