--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,8 @@ networkx==3.4.2
 numba==0.61.0
 numpy==1.26.4
 openai-whisper==20240930
-opencv-python-headless==4.11.0.86
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
 opt_einsum==3.4.0
 packaging==24.2
 pandas==2.2.3
@@ -101,6 +102,8 @@ soxr==0.5.0.post1
 sympy==1.13.1
 threadpoolctl==3.6.0
 tiktoken==0.9.0
+# torch==2.6.0
+# torchvision==0.21.0
 tqdm==4.67.1
 typing-inspection==0.4.0
 typing_extensions==4.13.0
@@ -112,6 +115,3 @@ urllib3==2.3.0
 Wave==0.0.2
 Werkzeug==3.1.3
 gunicorn==21.2.0
-cmake==3.28.5
-setuptools==68.2.2
-wheel==0.43.0
